# nes_emulator_rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
core/: .gitignore
core/src/: bus.rs  cartridge.rs  lib.rs  mem.rs  ppu.rs
cpu6502/: Cargo.toml
cpu6502/src/: cpu.rs  lib.rs  mock_bus.rs
emulator/: Cargo.toml
emulator/src/: bus.rs  cartridge.rs  cpu.rs  joypad.rs  lib.rs  opcodes.rs  register.rs  trace.rs
ppu/: Cargo.toml
ppu/src/: lib.rs  oam.rs  palette.rs  register.rs
ppu/src/registers/: address.rs  control.rs  loopy.rs  mask.rs  mod.rs  scroll.rs  status.rs
render/: Cargo.toml
render/src/: debug.rs  frame.rs  lib.rs  oam.rs  palette.rs  rectangle.rs
src/: bus.rs  cartridge.rs  cpu.rs  input.rs  main.rs  opcodes.rs  ppu.rs  register.rs  rom.rs  trace.rs
tests/: nestest.rs
tests/common/: mod.rs
