[package]
name = "nes_emulator_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35.2", features = ["ttf"] }
core = { path = "core" }
cpu6502 = { path = "cpu6502" }
ppu = { path = "ppu" }
emulator = { path = "emulator" }
render = { path = "render" }

[dev-dependencies]
k9 = "0.11.6"

[workspace]
members = [
    "core",
    "cpu6502",
    "ppu",
    "emulator",
    "render",
]
